syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service LocationService {
	rpc GetCoordinates(LocationId) returns(CoordinatesData);
	rpc GetAddress(LocationId) returns(AddressData);
	rpc Get(LocationId) returns(LocationData);
	rpc Create(LocationData) returns(LocationId);
}

message CoordinatesData {
	double latitude = 1;
	double longitude = 2;
}

message LocationData {
	string address = 1;
	string postCode = 2;
	string country = 3;
	string town = 4;
	double latitude = 5;
	double longitude = 6;
}

message AddressData {
	string address = 1;
	string postCode = 2;
	string country = 3;
	string town = 4;
}

message LocationId {
	int32 id = 1;
}
